@startuml VibeCodium - ER Diagram (MongoDB)
title VibeCodium - MongoDB Schema

entity "USER" as user {
  * sub : string <<PK>>
  --
  * email : string
  * name : string
  * picture : string
    githubToken : string
    vercelToken : string
  * createdAt : date
  * updatedAt : date
}

entity "PROJECT" as proj {
  * _id : ObjectId <<PK>>
  --
  * userId : string <<FK>>
  * name : string
    description : string
  * language : string
    localProjectId : string
  * isPublic : boolean
  * tags : array
  * createdAt : date
  * updatedAt : date
}

entity "TIMELINE_EVENT" as event {
  * _id : ObjectId <<PK>>
  --
  * userId : string <<FK>>
  * projectId : string <<FK>>
  * type : string
  * message : string
    metadata : object
  * timestamp : date
}

entity "HELP_POST" as help {
  * _id : ObjectId <<PK>>
  --
  * userId : string <<FK>>
  * title : string
  * content : text
    code : text
  * tags : array
  * views : integer
  * upvotes : integer
  * createdAt : date
  * updatedAt : date
}

entity "ANSWER" as answer {
  * userId : string
  --
  * content : text
    code : text
  * upvotes : integer
  * isAccepted : boolean
  * createdAt : date
}

entity "DEPLOYED_APP" as deploy {
  * _id : ObjectId <<PK>>
  --
  * userId : string <<FK>>
  * projectId : string <<FK>>
  * url : string
  * status : string
  * deploymentId : string
  * createdAt : date
}

entity "USER_TOKEN" as token {
  * _id : ObjectId <<PK>>
  --
  * userId : string <<FK>>
  * service : string
  * encryptedToken : string
  * createdAt : date
  * updatedAt : date
}

user ||--o{ proj
user ||--o{ event
user ||--o{ help
user ||--o{ deploy
user ||--o{ token

proj ||--o{ event
proj ||--o{ deploy

help ||--o{ answer

@enduml
